@@ -1,27 +1,30 @@
-package test.tmp;
+package test.inject;
 
+import org.testng.Assert;
 import org.testng.annotations.BeforeMethod;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
-public class A {
+public class InjectBeforeMethodTest {
+  private int m_index = 0;
+  private static final Object[][] DATA = { 
+      new Object[] { "a" },
+      new Object[] { "b" },
+  };
   
   @BeforeMethod
   public void before(Object[] parameters) {
-    System.out.println("BEFORE, PARAM:");// + parameters.length + " " + parameters[0]);
+      Assert.assertEquals(DATA[m_index], parameters);
+      m_index++;
   }
   
   @DataProvider
   public Object[][] dp() {
-    return new Object[][] { 
-        new Object[] { "a" },
-        new Object[] { "b" },
-    };
+    return DATA;
   }
 
   @Test(dataProvider = "dp")
   public void f(String a) {
-    System.out.println("TEST:" + a);
   }
-  
+
 }
