@@ -5,13 +5,14 @@ import org.testng.ITestContext;
 import org.testng.ITestNGMethod;
 import org.testng.annotations.Test;
 
-public class InjectTest {
+public class Sample {
 
   @Test
-  public void verifyTestContextInjection(ITestContext tc) {
+  public void f(ITestContext tc) {
     Assert.assertNotNull(tc);
     ITestNGMethod[] allMethods = tc.getAllTestMethods();
     Assert.assertEquals(allMethods.length, 1);
-    Assert.assertEquals(allMethods[0].getMethod().getName(), "verifyTestContextInjection");
+    Assert.assertEquals(allMethods[0].getMethod().getName(),"f");
+
   }
 }
