@@ -87,8 +87,8 @@
   
   <test name="Injection">
     <classes>
-      <!--  Need to be in a <test> of its own -->
-      <class name="test.inject.InjectTest" />
+      <class name="test.inject.InjectTestContextTest"/>
+      <class name="test.inject.InjectBeforeMethodTest"/>
     </classes>
   </test>
 	
